# github-contributions-widget

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js  script.js
Documentación/: temas.docx
css/: styles.css  styles_themes.css
scripts/: prepare-tauri-assets.mjs
scripts-legacy/: data.json  fetch-github-data.mjs  fetch_github_data.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
